Fixed spacing/alignment. Edited links.

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,159 +1,3 @@
-:root {
-    --text: beige;
-    --links: rgb(230,76,76);
-    --head-foot: rgb(27,75,74);
-}
-
-* {
-    border: 0;
-    margin: 0;
-    font-family: Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-}
-
-body {
-    background-color: rgb(35,49,66);
-}
-
-h2 {
-    font-size: 30px;
-    display: flex;
-    justify-content: center;
-    margin-top: 50px;
-    color: var(--text);
-    text-decoration: underline;
-}
-a {
-    color: var(--links);
-    text-decoration: none;
-}
-
-.links a:hover  {
-    color: var(--text);
-    background-color: var(--links);
-  }
-
-/* Nav Bar */
-h1 {
-    font-size: 65px;
-    color: var(--text);
-}
-
-ul {
-    list-style-type: none;
-}
-
-ul li {
-    display: inline-flex;
-    margin: 25px;
-    font-size: 20px;
-}
-
-header {
-    display: flex;
-    justify-content: space-between;
-    background-color: var(--head-foot);
-    padding: 25px;
-}
-
-/* About Me Section */
-img {
-    height: auto;
-    max-width: 100%;
-}
-
-.intro img {
-    border-radius: 30px;
-    width: 400px;
-}
-
-.intro {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-p {
-    color: var(--text);
-}
-
-.intro p {
-    max-width: 500px;
-    height: auto;
-}
-
- /* My Procjects Section */
-section {    
-    color: var(--text);
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-}
-
-section p {
-    display: flex;
-    justify-content: center;
-    margin: 30px 0px 15px;
-    font-size: 20px;
-}
-
-article img {
-    border-radius: 10px;
-}
-
-article img:hover {
-    box-shadow: 0px 0px 50px var(--links);
-}
-
-/* Reach Out Section */
-.bottom {
-    background-color: var(--head-foot);
-}
-
-section ul li {
-    display: inline-block;
-    color: var(--links);
-}
-
-/* Footer Style */
-footer {
-    display: flex;
-    justify-content: center;
-    background-color: var(--head-foot);
-}
-
-footer p {
-    color: black;
-}
-
-/* Small Smartphones */
-@media screen and (max-width: 675px) {
-    header,
-    nav,
-    h2  {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        /* padding-left: 30px;
-        padding-bottom: 0px; */
-    }
-
-    nav ul li {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    section {
-        margin: 10px;
-    }
-
-    .bottom {
-        margin: 0px;
-    }
-
-    section ul li {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }    
+i {
+    text-align: center;
 }
